--- a/static/css/login.css
+++ b/static/css/login.css
@@ -191,21 +191,23 @@ h2 {
 }
 
 /* Media queries responsivas */
-@media (max-height: 600px) {
+@media screen and (min-width: 375px) and (min-height: 667px) {
   .auth-container {
-    padding: 0.5rem;
-  }
-
-  .auth-card {
+    min-height: 667px;
     padding: 1rem;
   }
 
+  .auth-card {
+    width: min(100%, 360px);
+    padding: 1.5rem;
+  }
+
   .form-group {
-    margin-bottom: 0.75rem;
+    margin-bottom: 1rem;
   }
 }
 
-@media (min-width: 481px) and (min-height: 700px) {
+@media screen and (min-width: 481px) and (min-height: 700px) {
   .auth-card {
     padding: clamp(1.5rem, 4vh, 2.5rem);
   }
